# parrot

./: .editorconfig  .env.example  .gitignore  Procfile  README.md  Vagrantfile  noxfile.py  order.json  package.json  requirements-dev.txt  requirements.txt  setup.cfg
.provision/: bootstrap.sh
core/: asgi.py  urls.py  wsgi.py
core/settings/: base.py  development.py  production.py  staging.py  test.py
orders/: models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_auto_20210408_2139.py
parrot_auth/: apps.py  serializers.py  urls.py  views.py
