[metadata]
name = Parrot
version = attr: core.__version__
url = https://www.parrotsoftware.io/
author = Jacob Tuz Poot
author_email = jetp79@gmail.com
description = Parrot Software
long_description = file: README.md
license = Apache-2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8.3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://docs.parrot.mx/
    Release notes = https://docs.parrot.mx/en/stable/releases/
    Source = https://github.com/jtuz/parrot
    Tracker = https://github.com/jtuz/parrot/issues

[flake8]
# it's not a bug that we aren't using all of hacking, ignore:
# H306: imports not in alphabetical order (time, os)
# for more options: https://flake8.pycqa.org/en/latest/index.html#quickstart
ignore =
    H306,
exclude =
    .nox,
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    *.pyc,
    old,
    build,
    dist
max-complexity = 10
max-line-length = 100
max-doc-length = 99
per-file-ignores =
    core/settings/base.py:E501
    core/settings/development.py:F405
    core/settings/production.py:F405
    core/settings/staging.py:F405
